# ZEREFT-DLP

./: README.md
DLP_Agent/: CmakeLists.txt  CmakeListsDLP.txt  agentDLP.cpp  linux_agent.cpp  serverDLP.cpp  windows_agent.cpp  windows_server.cpp
DLP_Protocol/: .gitignore  CMakeLists.txt  README.md  lancs_dlp.conf
DLP_Protocol/dependencies/CJSON/: CMakeLists.txt
DLP_Protocol/dependencies/mosquitto/: libmosquitto.so.1
DLP_Protocol/include/: dlp_err.h  dlp_log.h  dlp_time.h  global_def.h  pthreads_dlp.h  shared.h
DLP_Protocol/include/connection_module/: client_shared.h  config.h
DLP_Protocol/include/rwconfig/: file_op.h  os_xml.h  os_xml_internal.h
DLP_Protocol/include/winservice/: service.h
DLP_Protocol/src/connection_module/: CMakeLists.txt  client_props.c  client_shared.c  pub_client.c  pub_shared.c  rr_client.c  sub_client.c  sub_client_output.c
DLP_Protocol/src/logging_module/: CMakeLists.txt  dlp_log.c  dlp_time.c
DLP_Protocol/src/rwconfig/: CMakeLists.txt  os_xml.c  os_xml_access.c  os_xml_node_access.c  os_xml_variables.c  os_xml_writer.c
DLP_Protocol/src/winservice/: CMakeLists.txt  service.c
DLP_Protocol/template_convention/: README.md  project_structure.md  template_program.c  template_program.h
DLP_Service/: CmakeLists.txt
DLP_Service/src/feature/: blEdit.cpp
DLP_Websites/: index.js  package-lock.json  package.json
DLP_Websites/public/: home.css
DLP_Websites/views/: history.ejs  home.ejs
